--- a/app/views/parciales/_footer.html.erb
+++ b/app/views/parciales/_footer.html.erb
@@ -19,11 +19,13 @@
          <h5 class="grey-text text-darken-2">Sobre el Autor</h5>
          <div class="row">
             <div class="col-xs-11">
+              <address>
                <p class="grey-text text-lighten-4 left-align cero-margin-top">
                   <img src="http://res.cloudinary.com/alfredhdz/image/upload/c_scale,q_64,w_150/v1442242514/g8dxbttcokyfr6y1kzsh.jpg" alt="autor" class=" circle responsive-img avatar">
                   Mi nombre es Alfred Hdz soy un aficionado ala programacion. Cree este sitio con el fin de apoyar y compartir aplicaciones de manera libre.
                </p>
                <p class="grey-text text-lighten-4 left-align">si te quieres unir a este proyecto manda un correo electronico a "alfredocruz9292@gmail.com"</p>
+               </address>
             </div>
          </div>
       </div>
@@ -31,7 +33,7 @@
    </div>
 
    <div class="footer-copyright copyright">
-         <span>© 2016 Todos los derechos resevados</span>
+         <span>© 2016 Todos los derechos reservados</span>
          <a class="right grey-text text-lighten-4" style="font-size:.8em;">
           <em>
               
