--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -47,7 +47,7 @@
 					<div class="col-xs left-align">
 						<i class="fa fa-tag show-icon"></i>
 						<% @article.tags.each do |tag| %>
-						<%= link_to tag.name, tag_path(tag),:class=>"show-color-text" %>
+							<%= link_to tag.name, tag_path(tag),:class=>"show-color-text" %>
 						<% end %>
 					</div>
 					<div class="row cero-margin">
@@ -79,7 +79,23 @@
 					</div>
 				</div>
 			</div>
+			<div>
+				<!-- Articles de categorias -->
+				<div class="col-xs cero-padding">
+					<div class="row">
+						<div class="col-xs center cero-padding ">
+							<h4 class="fondos_h left-align" > Similar a <%= @article.title %></h4>
+							<main class="sombras" >	
+								<% @article.tags.limit(6).each do |article| %>
+									<%=render @article%>
+								<% end %>
+							</main>
+						</div>
+					</div>
+				</div>
+		
 
+			</div>
 			<div class="border-top row center-xs">
 				<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 left-align">
 					<h4 class="caracteristicas center-align">Caracteristicas</h4>
