--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -87,6 +87,7 @@
 							<h4 class="fondos_h left-align" > Similar a <%= @article.title %></h4>
 							<main class="sombras" >
 							<% @category_where.each do |tag| %>
+								<span><%=tag.name%></span>
 								<% tag.articles.limit(6).each do |article| %>
 									<%=render @article%>
 								<% end %>
