--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -86,10 +86,10 @@
 						<div class="col-xs center cero-padding ">
 							<h4 class="fondos_h left-align" > Similar a <%= @article.title %></h4>
 							<main class="sombras" >
-							<% @category_where.each do |tag| %>
+							<% @category_where.limit(1).each do |tag| %>
 								<span><%=tag.name%></span>
 								<% tag.articles.limit(6).each do |article| %>
-									<%=render @article%>
+									<%=render partial: "article" , locals: { article: article } %>
 								<% end %>
 							<%end%>
 							</main>
