--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,6 +12,9 @@ body{
 		z-index: 1000 !important;
 	}
 }
+.overflow-x{
+	overflow-x:hidden;
+}
 .indicator{
 	background-color: #009688 !important;
 }
