--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
 		<%= render "sliderpatallacompleta" %>
 	</div>
 	<!-- Botones sociales tipo ventanilla -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+	<div class="overflow-x col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row center cero-margin">
 			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
 				<div class="button facebook slide_x">
