--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,11 @@
 <html lang="es-MX">
 	<head>
 		<%= meta_tags %>
-		<link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
+		<link rel="icon" type="image/png" href="https://compumexicopc.webcindario.com/images/logo.png" />
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-		<%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
-		<link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
+		<%= auto_discovery_link_tag(:rss, "https://dowloadapps.herokuapp.com/") %>
+		<link rel="alternate" hreflang="es" href="https://dowloadapps.herokuapp.com/" />
 	 <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
 	 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	</head>
