--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,58 +3,14 @@
 	<head>
 		<%= meta_tags %>
 		<link rel="icon" type="image/png" href="https://compumexicopc.webcindario.com/images/logo.png" />
-		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+		<%= stylesheet_link_tag    'application', media: 'all'%>
+		<%= javascript_include_tag 'application'%>
 		<%= auto_discovery_link_tag(:rss, "https://dowloadapps.herokuapp.com/") %>
 		<link rel="alternate" hreflang="es" href="https://dowloadapps.herokuapp.com/" />
 	 <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
 	 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	</head>
 <body>
-<div id="preloader">
-  <div class="preloader-wrapper big active">
-		<div class="spinner-layer spinner-blue">
-		  <div class="circle-clipper left">
-			 <div class="circle"></div>
-		  </div><div class="gap-patch">
-			 <div class="circle"></div>
-		  </div><div class="circle-clipper right">
-			 <div class="circle"></div>
-		  </div>
-		</div>
-
-		<div class="spinner-layer spinner-red">
-		  <div class="circle-clipper left">
-			 <div class="circle"></div>
-		  </div><div class="gap-patch">
-			 <div class="circle"></div>
-		  </div><div class="circle-clipper right">
-			 <div class="circle"></div>
-		  </div>
-		</div>
-
-		<div class="spinner-layer spinner-yellow">
-		  <div class="circle-clipper left">
-			 <div class="circle"></div>
-		  </div><div class="gap-patch">
-			 <div class="circle"></div>
-		  </div><div class="circle-clipper right">
-			 <div class="circle"></div>
-		  </div>
-		</div>
-
-		<div class="spinner-layer spinner-green">
-		  <div class="circle-clipper left">
-			 <div class="circle"></div>
-		  </div><div class="gap-patch">
-			 <div class="circle"></div>
-		  </div><div class="circle-clipper right">
-			 <div class="circle"></div>
-		  </div>
-		</div>
-	 </div>
-</div>
-
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
 	 <%= render "parciales/navegacion" %>
 	 
@@ -130,13 +86,5 @@
 	  		</div>
 		</div>
 	</div>
-	<script>
-		var do_on_load = function(){
-			$( "#preloader" ).addClass( "hide" );
-		}
-		  
-		  	$(document).ready(do_on_load);
-			$(window).bind('page:change', do_on_load);
-	</script>
 </body>
 </html>
