--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -83,7 +83,7 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding" id="android">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
 				<% if params[:search].blank? %>
@@ -104,7 +104,7 @@
 	<% if params[:search].blank? %>
 		<% @category_where.each do |tag| %>
 			<%unless tag.name=="lifestyle" or tag.name=="productividad" %>
-				<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
 					<div class="row">
 						<div class="col-xs center cero-padding ">
 							<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i data-tooltip="Más" data-delay="50" data-position="left" class="fa fa-arrow-circle-right tooltipped"></i><%end%></h4>
