--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
 	<!-- Este es el slider de patalla completa -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
 		<%= render "sliderpatallacompleta" %>
 	</div>
 	<!-- Botones sociales tipo ventanilla -->
@@ -83,7 +83,7 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
 				<% if params[:search].blank? %>
