--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -83,7 +83,7 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 z-depth-2">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
 				<% if params[:search].blank? %>
