--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -83,9 +83,9 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 z-depth-2">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 ">
 		<div class="row">
-			<div class="col-xs center cero-padding ">
+			<div class="col-xs center cero-padding z-depth-2">
 				<% if params[:search].blank? %>
 				<h4 class="fondos_h left-align" >Lo último</h4>
 				<%else%>
