--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -119,8 +119,8 @@
 			</div>
 		</main>
 
-		<div class="row sombras">
-			<div class="col-xs-12">
+		<div class="row">
+			<div class="col-xs-12 grey lighten-2">
 				<div class="row">
 					<div class="col-xs-6 left-align">
 						<h5>Comentarios</h5>
