--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,8 +1,8 @@
+@import "materialize";
 //Todo el cuerpo de la pagina
 body{
 	background-color: #EEEEEE;
 	max-width: 100%;
-	font-weight:100;
 	text-rendering:optimizeLegibility;
 	overflow-x: hidden;
 }
@@ -226,6 +226,8 @@ aside{
 	background-color: rgba(0,0,0,0.5) !important;
     bottom: 0!important;
     left: 0 !important;
+    top: initial;
+    height: 4em;
     width: 100% !important;
 }
 .side-nav li a{
