--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/png" href="https://res.cloudinary.com/alfredhdz/image/upload/v1452741743/logo_tgkmjf.png" />
 		<%= stylesheet_link_tag    'application', media: 'all'%>
 		<%= javascript_include_tag 'application'%>
-		<%= auto_discovery_link_tag(:rss, "https://dowloadapps.herokuapp.com/") %>
+		<%= auto_discovery_link_tag(:rss,{action: "feed"}) %>
 		<link rel="alternate" hreflang="es" href="https://dowloadapps.herokuapp.com/" />
 	 <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
 	</head>
