--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -424,7 +424,8 @@ nav{
 @media #{$small-and-down} {
    main{
    	.cuadro-1{
-   		width: 9em;
+   		width: 9.5em;
+   		margin: 5px;
    	}
    }
   }
