--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -128,6 +128,7 @@
 							<%= link_to tag, :class=>"cero-padding" do%>
 								<i class="<%= icon_tag %> <%= @back_color_tag %> ico-nav grey-text text-lighten-5"></i>
 								<span class="font-nav"><%= tag.name %></span>
+								<i class="icon-nav fa fa-angle-right" aria-hidden="true"></i>
 							<%end%>
 						</li>
 					<% end %>
