--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -22,7 +22,7 @@
 					<% if tag.name == "juegos" %>
 						<% decoration_color="green darken-2" %>
 						<div class="text-decoration <%= decoration_color%>">
-							<span>juegos</span>
+							<span><i class="fa fa-gamepad" aria-hidden="true"></i></span>
 						</div>
 					<%elsif tag.name == "comunicacion"%>
 						<% decoration_color="teal darken-2" %>
