--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -261,8 +261,8 @@ aside{
 		overflow: hidden!important;
 		.text-decoration{
 				position: absolute;
-				width: 4.5em;
-				height: 4.5em;
+				width: 4em;
+				height: 4em;
 				border-radius: 4.5em;
 				z-index: 2;
 				left: -2em;
@@ -272,8 +272,8 @@ aside{
 					position: relative;
 					display: inline-block;
 					text-align: center;
-					top: 3em;
-					right: -.9em;
+					top: 2.7em;
+					right: 1em;
 					transform:rotate(-45deg);
 					font-size: 0.8em;
 				}
