--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,10 @@
 <div class="row center-xs">
+<!-- index1_dowloadapps -->
+	<ins class="adsbygoogle"
+	     style="display:block"
+	     data-ad-client="ca-pub-5053365791951337"
+	     data-ad-slot="9330992601"
+	     data-ad-format="link"></ins>
  		<!-- para cuando javaScrip esta desabilitado -->
 		<noscript>Esta pagina no funcionara Correctamente si JavaScript esta deshabilitado.</noscript>
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
