--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 		<%= auto_discovery_link_tag(:rss, "https://dowloadapps.herokuapp.com/feed") %>
 		<link rel="alternate" hreflang="es" href="https://dowloadapps.herokuapp.com/" />
 	 	<meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
+	 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+		    google_ad_client: "ca-pub-5053365791951337",
+		    enable_page_level_ads: true
+		  });
+		</script>
 	</head>
 <body>
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
@@ -38,9 +45,6 @@
 
 		 <%= analytics_init if GoogleAnalytics.valid_tracker? %>
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
 	 <%= yield %>
 	<!-- Modal Structure  de ingresar-->
 	<div id="modal1" class="modal">
