--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -229,13 +229,19 @@ aside{
 	height: auto;
 }
 
-.slider .slides li .caption{
-	background-color: rgba(0,0,0,0.5) !important;
-    bottom: 0!important;
-    left: 0 !important;
-    top: initial;
-    height: 4em;
-    width: 100% !important;
+.slider{
+	height: 30em!important;
+ 	ul{
+		height: 27em!important;
+	 	li .caption{
+			background-color: rgba(0,0,0,0.5) !important;
+		    bottom: 0!important;
+		    left: 0 !important;
+		    top: initial;
+		    height: 4em;
+		    width: 100% !important;
+	    }
+	}
 }
 .side-nav li a{
 	&:hover{
