--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -463,3 +463,15 @@ nav{
    	}
    }
   }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 580px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+	.slider{
+		height: 250px!important;
+		.slides{
+			height: 200px!important;
+		}
+	}
+}
