--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -468,10 +468,14 @@ nav{
   and (min-device-width: 300px) 
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
-	.slider{
-		height: 250px!important;
-		.slides{
-			height: 200px!important;
+  	.sliderP{
+  		padding-right: 0px!important;
+  		padding-left: 0px!important;
+  		.slider{
+			height: 250px!important;
+			.slides{
+				height: 200px!important;
+			}
 		}
-	}
+  	}
 }
