--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,7 +14,7 @@
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
 	<!-- Este es el slider de patalla completa -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 sliderP">
 		<%= render "sliderpatallacompleta" %>
 	</div>
 	<!-- Botones sociales tipo ventanilla -->
