--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,4 @@
-<div class="cuadro-1 hoverable" id="posts">
+<div class="cuadro-1 hoverable">
 
 	<div class="row cero-margin">
 		<div class="col-xs-6 left-align">
