--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -93,7 +93,7 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 ">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 white">
 		<div class="row">
 			<div class="col-xs center cero-padding z-depth-2">
 				<% if params[:search].blank? %>
@@ -101,12 +101,13 @@
 				<%else%>
 				<h4 class="fondos_h left-align" >Mostrando <%= @articles.count %> resultados para: "<%= params[:search] %>"</h4>
 				<%end%>
-				<main class="sombras" >		
+				<article class="infinite-table">	
 					<%= render @articles %>
-					<div class="col-xs-12 border-top pagination">
-						<%= will_paginate @articles,:container => false,:inner_window => 2  %>
-					</div>
-				</main>
+					
+				</article>
+				<div class="col-xs-12 border-top pagination">
+					<%= link_to_next_page(@articles,'Cargar Mas',:remote=>true) %>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -114,15 +115,15 @@
 	<% if params[:search].blank? %>
 		<% @category_where.each do |tag| %>
 			<%unless tag.name=="lifestyle" or tag.name=="productividad" %>
-				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 white">
 					<div class="row">
 						<div class="col-xs center cero-padding z-depth-2 ">
 							<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i data-tooltip="Más" data-delay="50" data-position="left" class="fa fa-arrow-circle-right tooltipped"></i><%end%></h4>
-							<main class="sombras" >	
+							<article class="sombras" >	
 								<% tag.articles.limit(6).each do |article| %>
 									<%=render partial: "article" , locals: { article: article } %>
 								<% end %>
-							</main>
+							</article>
 						</div>
 					</div>
 				</div>
