--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -80,13 +80,13 @@
 					<div class="row">
 						<div class="col-xs center cero-padding ">
 							<h4 class="fondos_h left-align" > Similar a <%= @article.title %></h4>
-							<main class="sombras" >
+							<article >
 								<% @article.tags.limit(1).each do |tag| %>
 									<% tag.articles.limit(6).each do |article| %>
 										<%=render partial: "article" , locals: { article: article } %>
 									<% end %>
 								<%end%>
-							</main>
+							</article>
 						</div>
 					</div>
 				</div>
