--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -103,10 +103,9 @@
 				<%end%>
 				<article class="infinite-table">	
 					<%= render @articles %>
-					
 				</article>
-				<div class="col-xs-12 border-top pagination">
-					<%= link_to_next_page(@articles,'Cargar Mas',:remote=>true) %>
+				<div class="col-xs-12 border-top pag">
+					<%= link_to_next_page(@articles,'Cargar Mas',:remote=>true,:class=>'btn waves-effect waves-yellow green accent-3s) %>
 				</div>
 			</div>
 		</div>
@@ -119,7 +118,7 @@
 					<div class="row">
 						<div class="col-xs center cero-padding z-depth-2 ">
 							<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i data-tooltip="Más" data-delay="50" data-position="left" class="fa fa-arrow-circle-right tooltipped"></i><%end%></h4>
-							<article class="sombras" >	
+							<article>	
 								<% tag.articles.limit(6).each do |article| %>
 									<%=render partial: "article" , locals: { article: article } %>
 								<% end %>
