--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -105,7 +105,7 @@
 					<%= render @articles %>
 				</article>
 				<div class="col-xs-12 border-top pag">
-					<%= link_to_next_page(@articles,'Cargar Mas',:remote=>true,:class=>'btn waves-effect waves-yellow green accent-3s) %>
+					<%= link_to_next_page(@articles,'Cargar Mas',:remote=>true,:class=>'btn waves-effect waves-yellow green accent-3s') %>
 				</div>
 			</div>
 		</div>
