--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -8,9 +8,9 @@
 			<div class="col-xs center cero-padding">
 			<h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
 			<h4 class="fondos_h text-shadow left-align mayusculas"><%=link_to @tag.name,tag_path(@tag) %></h4>
-				<article>
+				<div>
 					<%= render @tag.articles %>
-				</article>
+				</div>
 			</div>
 		</div>
 	</div>
