--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,4 @@
-<div class="cuadro-1 hoverable">
+<article class="cuadro-1 hoverable">
 
 	<div class="row cero-margin">
 		<div class="col-xs-6 left-align">
@@ -90,4 +90,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</article>
