--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -93,8 +93,8 @@
 		</div>
 	</div><!-- fin de botones sociales -->
 	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 white">
-		<div class="row">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 ">
+		<div class="row white">
 			<div class="col-xs center cero-padding z-depth-2">
 				<% if params[:search].blank? %>
 				<h4 class="fondos_h left-align" >Lo último</h4>
@@ -114,8 +114,8 @@
 	<% if params[:search].blank? %>
 		<% @category_where.each do |tag| %>
 			<%unless tag.name=="lifestyle" or tag.name=="productividad" %>
-				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 white">
-					<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+					<div class="row white">
 						<div class="col-xs center cero-padding z-depth-2 ">
 							<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i data-tooltip="Más" data-delay="50" data-position="left" class="fa fa-arrow-circle-right tooltipped"></i><%end%></h4>
 							<div>	
