--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -3,8 +3,8 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "articles/sliderpatallacompleta" %>
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 marin-top cero-padding white">
-		<div class="row">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 marin-top cero-padding">
+		<div class="row white">
 			<div class="col-xs center cero-padding">
 			<h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
 			<h4 class="fondos_h text-shadow left-align mayusculas"><%=link_to @tag.name,tag_path(@tag) %></h4>
