--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
 	<%= render "parciales/tags" %>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<h3 class="fondos_h text-shadow" ><%= link_to @article.title, @article%></h3>
-		<main class=" center-align sombras" >						
+		<main class=" center-align white" >						
 			<div class="row ">
 				<div class="col-xs-12 border-bottom margin-bottom">
 					<div class="row card-header">
