--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 cero-padding"}) do |f| %>
+<div class="row white">
+  <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
     <div class="row">
       <div class="input-field col s12 cero-padding">
         <i class="fa fa-envelope prefix"></i>
