--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -40,6 +40,9 @@
          <i class="fa fa-paper-plane right"></i>
         </button>
       </div>
+      <div class="center-align col s12 cero-padding">
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
   <% end %>
 </div>
