--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -140,6 +140,19 @@
 							<span class="font-nav">Salir</span>
 						<%end%>
 					</li>
+				<%elsif%>
+					<li>
+		              <%= link_to new_user_session_path do%>
+		                  <i class="fa fa-sign-in" aria-hidden="true"></i>
+		                  <span>Ingresar</span>
+		              <%end%>
+		            </li>
+		            <li>
+		               <%= link_to new_user_registration_path do%>
+		                  <i class="fa fa-user-plus" aria-hidden="true"></i>
+		                  <span>Crear cuenta</span>
+		               <%end%>
+		            </li>
 				<% end -%>
 
 			</ul>
