--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -144,13 +144,13 @@
 					<li>
 		              <%= link_to new_user_session_path do%>
 		                  <i class="fa fa-sign-in ico-nav" aria-hidden="true"></i>
-		                  <span>Ingresar</span>
+		                  <span class="font-nav">Ingresar</span>
 		              <%end%>
 		            </li>
 		            <li>
 		               <%= link_to new_user_registration_path do%>
 		                  <i class="fa fa-user-plus ico-nav" aria-hidden="true"></i>
-		                  <span>Crear cuenta</span>
+		                  <span class="font-nav">Crear cuenta</span>
 		               <%end%>
 		            </li>
 				<% end -%>
