--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -141,13 +141,13 @@
 						<%end%>
 					</li>
 				<%elsif%>
-					<li>
+					<li class="collection-tags-nav cero-padding">
 		              <%= link_to new_user_session_path do%>
 		                  <i class="fa fa-sign-in ico-nav" aria-hidden="true"></i>
 		                  <span class="font-nav">Ingresar</span>
 		              <%end%>
 		            </li>
-		            <li>
+		            <li class="collection-tags-nav cero-padding">
 		               <%= link_to new_user_registration_path do%>
 		                  <i class="fa fa-user-plus ico-nav" aria-hidden="true"></i>
 		                  <span class="font-nav">Crear cuenta</span>
