--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12 cero-padding"}) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12"}) do |f| %>
 
-    <div class="row">
+    <div class="row white">
     
       <div class="input-field col s12 cero-padding">
         <i class="fa fa-user prefix"></i>
