--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -1,4 +1,4 @@
-<div class="row white">
+<div class="row white z-depth-2">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12"}) do |f| %>
 
     <div class="row">
