--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
 <!-- dowloadappsadaptable -->
 <div class="row cero-margin">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 	<div class="col-xs">
 		<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2360559806" data-ad-format="auto"></ins>
 	</div>
