--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,14 @@
 <div class="row center-xs">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- index1_dowloadapps -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5053365791951337"
-     data-ad-slot="9330992601"
-     data-ad-format="link"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<!-- index1_dowloadapps -->
+<div class="col-xs">
+	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601" data-ad-format="link"></ins>
+
+</div>
+
  		<!-- para cuando javaScrip esta desabilitado -->
 		<noscript>Esta pagina no funcionara Correctamente si JavaScript esta deshabilitado.</noscript>
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
