--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 </script>
 <!-- index1_dowloadapps -->
 <div class="col-xs">
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601" data-ad-format="link"></ins>
+	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601" data-ad-format="auto"></ins>
 
 </div>
 
