--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,8 +5,11 @@
 </script>
 <!-- index1_dowloadapps -->
 <div class="col-xs">
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2098443801" data-ad-format="link"></ins>
-
+	<div class="row">
+		<div class="col-xs-12">
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
+		</div>
+	</div>
 </div>
 
  		<!-- para cuando javaScrip esta desabilitado -->
