--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <!-- index1_dowloadapps -->
-<div class="col-xs">
+<div class="col-xs-12">
 	<div class="row">
 		<div class="col-xs-12">
 			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
