--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -93,8 +93,6 @@
 						</div>
 					</div>
 				</div>
-		
-
 			</div>
 			<div class="border-top row center-xs">
 				<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 left-align">
@@ -116,7 +114,12 @@
 				</div>
 			</div>
 		</main>
-
+		<div class="row">
+			<div class="col-xs-12">
+				<!-- footershowdowloadapps -->
+				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="3558091400" data-ad-format="auto"></ins>
+			</div>			
+		</div>
 		<div class="row">
 			<div class="col-xs-12 grey lighten-2">
 				<div class="row">
@@ -142,6 +145,4 @@
 		</div>
 	</div>	
 </div>
-<!-- footershowdowloadapps -->
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="3558091400" data-ad-format="auto"></ins>
 <%= render "parciales/footer" %>
