--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -116,8 +116,16 @@
 		</main>
 		<div class="row">
 			<div class="col-xs-12">
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 				<!-- footershowdowloadapps -->
-				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="3558091400" data-ad-format="auto"></ins>
+				<ins class="adsbygoogle"
+				     style="display:block"
+				     data-ad-client="ca-pub-5053365791951337"
+				     data-ad-slot="3558091400"
+				     data-ad-format="auto"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 			</div>			
 		</div>
 		<div class="row">
