--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -20,6 +20,14 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 sliderP">
 		<%= render "sliderpatallacompleta" %>
 	</div>
+	<div class="col-xs-12">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- index2_dowloadapps -->
+		<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2098443801" data-ad-format="link"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
+	</div>
 	<!-- Botones sociales tipo ventanilla -->
 	<div class="overflow-x col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row center cero-margin">
