--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,7 +26,7 @@
 		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
 		<!-- index2_dowloadapps -->
-		<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2098443801" data-ad-format="link"></ins>
+		<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2098443801" data-ad-format="auto"></ins>
 		
 	</div>
 	<!-- Botones sociales tipo ventanilla -->
