--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,23 @@
 <div class="row center-xs">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<!-- index1_dowloadapps -->
-<div class="col-xs-12">
-	<div class="row">
-		<div class="col-xs-12">
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
-		</div>
-	</div>
-</div>
-
- 		<!-- para cuando javaScrip esta desabilitado -->
-		<noscript>Esta pagina no funcionara Correctamente si JavaScript esta deshabilitado.</noscript>
+ 	<!-- para cuando javaScrip esta desabilitado -->
+	<noscript>Esta pagina no funcionara Correctamente si JavaScript esta deshabilitado.</noscript>
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
 	<!-- Este es el slider de patalla completa -->
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 sliderP">
 		<%= render "sliderpatallacompleta" %>
+	</div>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	<!-- index1_dowloadapps -->
+	<div class="col-xs-12">
+		<div class="row">
+			<div class="col-xs-12">
+				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
+			</div>
+		</div>
 	</div>
 	<!-- Botones sociales tipo ventanilla -->
 	<div class="overflow-x col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
@@ -112,6 +111,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="col-xs-12">
+		<!-- Start of adf.ly banner code -->
+			<div style="width: 468px; text-align: center; font-family: verdana; font-size: 10px;"><a href="http://adf.ly/?id=6124100"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.468x60.5.gif" width="468" height="60" title="AdF.ly - acorta links y gana dinero!" /></a><br /><a href="http://adf.ly/?id=6124100">Gana dinero por compartir tus enlaces!</a></div>
+<!-- End of adf.ly banner code -->
 	</div>
 	<!-- Articles de categorias -->
 	<% if params[:search].blank? %>
