--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,8 +14,8 @@
 	<!-- index1_dowloadapps -->
 	<div class="col-xs-12">
 		<div class="row">
-			<div class="col-xs-12">
-				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
+			<div class="col-xs-12 center">
+				<ins class="adsbygoogle" style="display:inline-block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
 			</div>
 		</div>
 	</div>
