--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 center">
-				<ins class="adsbygoogle" style="display:inline-block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
+				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="9330992601"data-ad-format="link"></ins>
 			</div>
 		</div>
 	</div>
