--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -113,9 +113,13 @@
 		</div>
 	</div>
 	<div class="col-xs-12">
-		<!-- Start of adf.ly banner code -->
-			<div style="width: 468px; text-align: center; font-family: verdana; font-size: 10px;"><a href="http://adf.ly/?id=6124100"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.468x60.5.gif" width="468" height="60" title="AdF.ly - acorta links y gana dinero!" /></a><br /><a href="http://adf.ly/?id=6124100">Gana dinero por compartir tus enlaces!</a></div>
-<!-- End of adf.ly banner code -->
+		<div class="row">
+			<div class="col-xs-12 center">
+			<!-- Start of adf.ly banner code -->
+				<div style="width: 468px; text-align: center; font-family: verdana; font-size: 10px;"><a href="http://adf.ly/?id=6124100"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.468x60.5.gif" width="468" height="60" title="AdF.ly - acorta links y gana dinero!" /></a><br /><a href="http://adf.ly/?id=6124100">Gana dinero por compartir tus enlaces!</a></div>
+			<!-- End of adf.ly banner code -->
+			</div>
+		</div>
 	</div>
 	<!-- Articles de categorias -->
 	<% if params[:search].blank? %>
