--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -151,6 +151,13 @@
 				</div>
 		    </div>
 		</div>
+		<div class="row center-xs">
+			<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
+				<!-- Start of adf.ly banner code -->
+				<div style="width: 100%; text-align: center; font-family: verdana; font-size: 10px;"><a href="http://adf.ly/?id=6124100"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.728x90.1.gif" width="100%" height="90" title="AdF.ly - acorta links y gana dinero!" /></a><br /><a href="http://adf.ly/?id=6124100">Gana dinero por compartir tus enlaces!</a></div>
+				<!-- End of adf.ly banner code -->
+			</div>
+		</div>
 	</div>	
 </div>
 <%= render "parciales/footer" %>
