--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -59,6 +59,10 @@
 						</div>
 						<%end%>
 					</div>
+					<div class="col-xs">
+						<!-- Start of adf.ly banner code --><a href="http://adf.ly/?id=6124100"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.350x19.1.png" width="100%" height="19" title="AdF.ly - acorta links y gana dinero!" /></a>
+						<!-- End of adf.ly banner code -->
+					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 right">
 					<div class='share-post'>
