--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -62,7 +62,7 @@
 			<ul id="slide-out" class="side-nav">
 				<li>
 					<%= link_to root_path,:style=>"padding-bottom:5em" do%>
-						<img src="http://res.cloudinary.com/alfredhdz/image/upload/v1452741743/logo_tgkmjf.png" alt="logo">
+						<img src="https://res.cloudinary.com/alfredhdz/image/upload/v1452741743/logo_tgkmjf.png" alt="logo">
 					<%end%>
 
 				</li>
